public/style.css
/* ... */
.about-img-container {
display: flex;
justify-content: center;
align-items: center;
width: 100%;
max-width: 40rem;
 max-height:40rem;
aspect-ratio: 1;
overflow: hidden;
border-radius: var(--radius-xl);
}

.about-img {
width: 100%;
height: 100%;
object-fit: cover;
border-radius: var(--radius-xl);
}

.about-heading,
.about-paragraph {
margin-bottom: var(--space-16);
}

.about-heading {
font-size: var(--text-2xl);
}

.about-paragraph {
font-size: var(--text-xl);
  max-width:70ch;
}

/*RESUME__SECTION*/

.resume-section{
margin-bottom:var(--space-64);
}
.resume-container{
max-width: var(--container-width);
width: 90%;
margin:0 auto;
display:flex;
flex-direction: column;

}

.resume-heading {
margin-top:var(--space-12);
margin-bottom: var(--space-12);
font-size:var(--text-3xl);
}

.resume-paragraph{
margin-bottom:var(--space-12);
font-size:var(--text-xl);
}
.resume-section .btn-primary{
width:100%;
}

/* ===== SERVICE SECTION ===== */
.service-section{
margin-bottom: var(--space-64);
}

.service-container {
display: grid;
grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
justify-items:center;
gap: var(--space-32);
max-width: var(--container-width);
margin: 0 auto;
width: 90%;
}

.service-heading,
.service-paragraph {
text-align: center;
}

.service-heading {
margin-bottom: var(--space-24);
}
.service-paragraph {
font-size: var(--text-xl);
padding-top: var(--space-12);
}

.service-card-link {
margin-top: var(--space-12);
text-align: center; font-size: var(--text-xl);
}

/* ===== WORK / PORTFOLIO SECTION ===== */
.work-section{
margin-bottom: var(--space-64);
}

.work-container {
display: grid;
grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
  justify-items:center;
gap: var(--space-24);
max-width: var(--container-width);
margin: 0 auto;
width: 90%;
}

.portfolio-heading,
.portfolio-paragraph,
.card-link {
text-align: center;
}
.portfolio-paragraph {
font-size: var(--text-xl);
}

/*CTA__SECTION*/
.cta-section{
margin-bottom: var(--space-32);
}
.cta-container{
display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
gap:var(--space-16);
max-width: var(--container-width);
margin: 0 auto;
width:90%;
}

.cta-btn-container{
display:flex;
gap:var(--space-16);
flex-direction:column;
width:100%;
}

.cta-paragraph{
font-size:var(--text-3xl);
text-align:center;
}

.cta-heading{
font-size:var(--text-5xl);
}

/*CONTACT SECTION*/
.contact-section{
   padding-top:70px;
}

.contact-container{
   display:flex;
   justify-content:center;
  flex-wrap:wrap;
    align-items:center;
    min-height:100vh;
    margin:0 auto;
    width:90%;
    max-width:var(--container-width);
}

/* ===== FOOTER ===== */
.footer-section{
 margin-bottom: var(--space-48);
 border-top:1px solid  #e5e7eb;
 padding-top:30px;
}



.footer-container {
display: flex;
flex-direction: column;
align-items: center;
gap: var(--space-8);
max-width: var(--container-width);
margin: 0 auto;
width: 90%;
}

.footer-description{
font-size: var(--text-3xl);
}

.social-link-container {
display: flex;
gap: var(--space-12);
}

.social-link i {
font-size: var(--text-4xl);
color: var(--primary-500);
display: flex;
justify-content: center;
align-items: center;
} 


  /* ===== DARK MODE ===== */
.dark-mode {
  /* Override primary colors for dark mode */
  

  /* Override secondary colors for dark mode */
  
  /* Override base colors */
  --white: #ffffff;
  --black: #000000;
}

/* Additional dark mode element styles */
body.dark-mode  {
  background-color: var(--black);
}


body .darkmode h1,
body .darkmode h2,
body .darkmode h3,
body .darkmode h4,
body .darkmode h5{
    color: var(--white);
}

.dark-mode * {
  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
}

